# cookbook

./: .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
backend/: Dockerfile.dev  pyproject.toml
backend/backend/: settings.py  urls.py
backend/ingredients/: models.py  serializers.py  urls.py  views.py
backend/ingredients/migrations/: 0001_initial.py  0002_remove_ingredient_amount_remove_ingredient_unit.py  0003_alter_ingredient_name.py
cookbook/cookbook/: settings.py  urls.py
cookbook/core/database/: mixins.py
cookbook/ingredients/: models.py  serializers.py  views.py
cookbook/ingredients/migrations/: 0001_initial.py
cookbook/recipes/: views.py
frontend/src/: App.vue  main.js
frontend/src/components/: Ingredients.vue
nginx/: dev.conf
